--- a/Recipe-Book/recipe1/recipe1.html
+++ b/Recipe-Book/recipe1/recipe1.html
@@ -6,39 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../recipe.css">
     <link rel="icon" href="../images/website-icon.svg">
-    <title>testest</title>
+    <title>Recipe 1</title>
 </head>
 
 <body style="background-image: url(../images/wood-background.jpg); padding: 40px; gap:60px;" class="flex flex-row size-full box-border">
     <nav class="h-full bg-grey rounded-md overflow-y-scroll no-scrollbar" style="width: 300px;">
-        <a href="#" class="logo">
+        <a href="../home/home.html" class="logo">
             <img class="logo_img" src="../images/logo-removebg-preview.png"  alt="logo">
         </a>
         <ul class="nav_list">
             <li class="nav_item">
-                <a href="#" class="nav_link">Recipe 1</a>
+                <a href="recipe1.html" class="nav_link">Recipe 1</a>
             </li>
             <li class="nav_item">
-                <a href="#" class="nav_link">Recipe 2</a>
+                <a href="../recipe2/recipe2.html" class="nav_link">Recipe 2</a>
             </li>
             <li class="nav_item">
-                <a href="#" class="nav_link">Recipe 3</a>
+                <a href="../recipe3/recipe3.html" class="nav_link">Recipe 3</a>
             </li>
             <li class="nav_item">
-                <a href="#" class="nav_link">Recipe 4</a>
+                <a href="../recipe4/recipe4.html" class="nav_link">Recipe 4</a>
             </li>
             <li class="nav_item">
-                <a href="#" class="nav_link">Recipe 5</a>
+                <a href="../recipe5/recipe5.html" class="nav_link">Recipe 5</a>
             </li>
             <li class="nav_item">
-                <a href="#" class="nav_link">Citations</a>
+                <a href="../citations/citations.html" class="nav_link">Citations</a>
             </li>
         </ul>
     </nav>
-<!--
-    <div style="position: absolute; left: 27%; top: 15%; width: 430px; height: 682px;" >
-        <p style="color: black; width:450px; overflow-wrap: anywhere;" > heheheheheuhfaeuhdhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhu</p>
-    </div> -->
 
     <article class="size-full box-border" style="padding: 40px">
         <div class="bookStyling size-full flex flex-row">
