--- a/Recipe-Book/recipe3/recipe3.html
+++ b/Recipe-Book/recipe3/recipe3.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3rd Recipe</title>
+    <link rel="stylesheet" href="../recipe.css">
+    <link rel="icon" href="../images/website-icon.svg">
+    <title>Chocolate Chip Icing Cookies</title>
 </head>
-<body>
+
+<body style="background-image: url(../images/wood-background.jpg); padding: 40px; gap:60px;" class="flex flex-row size-full box-border">
+    <nav class="h-full bg-grey rounded-md overflow-y-scroll no-scrollbar" style="width: 300px;">
+        <a href="../home/home.html" class="logo">
+            <img class="logo_img" src="../images/logo-removebg-preview.png"  alt="logo">
+        </a>
+        <ul class="nav_list">
+            <li class="nav_item">
+                <a href="../recipe1/recipe1.html" class="nav_link">Recipe 1</a>
+            </li>
+            <li class="nav_item">
+                <a href="../recipe2/recipe2.html" class="nav_link">Recipe 2</a>
+            </li>
+            <li class="nav_item">
+                <a href="recipe3.html" class="nav_link">Chocolate Chip Icing Cookies</a>
+            </li>
+            <li class="nav_item">
+                <a href="../recipe4/recipe4.html" class="nav_link">Recipe 4</a>
+            </li>
+            <li class="nav_item">
+                <a href="../recipe5/recipe5.html" class="nav_link">Recipe 5</a>
+            </li>
+            <li class="nav_item">
+                <a href="../citations/citations.html" class="nav_link">Citations</a>
+            </li>
+        </ul>
+    </nav>
+
+    <article class="size-full box-border" style="padding: 40px">
+        <div class="bookStyling size-full flex flex-row">
+            <img class="backdrop" src="../images/book.png"/>
+
+            <section class="part">
+                <h2 style="text-align: center; font-size: 30px;">Chocolate Chip Icing Cookies</h2>
+                <h3 class="margin_left">Ingrediants</h3>
+                <p>
+                    <ul>
+                        <li>1 cup unsalted butter</li>
+                        <li>1 cup light brown sugar</li>
+                        <li>3/4th cup granulated sugar</li>
+                        <li>2 eggs</li>
+                        <li>2 teaspoons vanilla extract</li>
+                        <li>3 cups flour</li>
+                        <li>1 teaspoon baking soda</li>
+                        <li>1 teaspoon salt</li>
+                        <li>1 cup of chocolate chips</li>
+                        <li>Icing of your choice</li>
+                    </ul>
+                </p>
+                <hr>
+                <h3>
+
+                </h3>
+            </section>
+
+            <section class="part2">
+                <p>
+
+                </p>
+            </section>
+        </div>
+    </article>
+
     
 </body>
+
 </html>
