--- a/Recipe-Book/recipe4/recipe4.html
+++ b/Recipe-Book/recipe4/recipe4.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../recipe.css">
     <title>4th Recipe</title>
 </head>
-<body>
-    
+<body style="background-image: url(../images/wood-background.jpg); padding: 40px; gap:60px;" class="flex flex-row size-full box-border">
+    <nav class="h-full bg-grey rounded-md overflow-y-scroll no-scrollbar" style="width: 300px;">
+        <a href="../home/home.html" class="logo">
+            <img class="logo_img" src="../images/logo-removebg-preview.png"  alt="logo">
+        </a>
+        <ul class="nav_list">
+            <li class="nav_item">
+                <a href="../recipe1/recipe1.html" class="nav_link">Recipe 1</a>
+            </li>
+            <li class="nav_item">
+                <a href="../recipe2/recipe2.html" class="nav_link">Recipe 2</a>
+            </li>
+            <li class="nav_item">
+                <a href="../recipe3/recipe3.html" class="nav_link">Recipe 3</a>
+            </li>
+            <li class="nav_item">
+                <a href="recipe4.html" class="nav_link">Recipe 4</a>
+            </li>
+            <li class="nav_item">
+                <a href="../recipe5/recipe5.html" class="nav_link">Recipe 5</a>
+            </li>
+            <li class="nav_item">
+                <a href="../citations/citations.html" class="nav_link">Citations</a>
+            </li>
+        </ul>
+    </nav>
+
+    <article class="size-full box-border" style="padding: 40px">
+        <div class="bookStyling size-full flex flex-row">
+            <img class="backdrop" src="../images/book.png"/>
+
+            <section class="part">
+                <p>
+
+                </p>
+            </section>
+
+            <section class="part2">
+                <p>
+
+                </p>
+            </section>
+        </div>
+    </article>
+
 </body>
 </html>
